# Android-PDF-Reader

./: .gitignore  CONTRIBUTING.md  PHASE_D_PLAN.md  PROJECT_ROADMAP.md  README.md  RELEASE_NOTES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml  fdroid-beta.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/pdfreader/: MainActivity.kt
app/src/main/kotlin/com/pdfreader/workers/: OcrWorker.kt
app/src/main/res/values/: strings.xml  themes.xml
core/annotations/: build.gradle.kts
core/annotations/src/main/kotlin/com/pdfreader/core/annotations/: Annotation.kt
core/ocr/: build.gradle.kts
core/ocr/src/main/: AndroidManifest.xml
core/ocr/src/main/kotlin/com/pdfreader/core/ocr/: HocrParser.kt  OcrJob.kt  OcrLayout.kt  OcrLayoutSerializer.kt  TesseractOcrEngine.kt
core/pdf-engine/: CMakeLists.txt  build.gradle.kts
core/pdf-engine/src/main/cpp/: jni_bridge.cpp  mupdf_wrapper.cpp
core/pdf-engine/src/main/kotlin/com/pdfreader/core/pdfengine/: MuPdfEngine.kt  PdfEngine.kt
core/renderer/: build.gradle.kts
core/renderer/src/main/kotlin/com/pdfreader/core/renderer/: PageRenderRequest.kt
core/storage/: build.gradle.kts
core/storage/src/main/kotlin/com/pdfreader/core/storage/: AppDatabase.kt  DatabaseProvider.kt  DocumentDao.kt  (+8 more)
docs/: ARCHITECTURE.md  FDROID_BETA_RELEASE.md  LICENSES.md
fdroid/: com.pdfreader.yml
gradle/: libs.versions.toml
scripts/: backup-snapshot.sh  launch-app.sh  perf-smoke.sh  release-beta-fdroid.sh  setup-dev-env.sh
